# TCP-Socket

./: README.md
client/: .gitignore  CMakeLists.txt  main.cpp
client/build-huhuClient-Desktop-Debug/: .ninja_deps  .ninja_log  huhuClient
clientPi/: SimpleClient.cpp  main.cpp
clientPi/build-huhuClientPi-RPI-Debug/: .ninja_deps  .ninja_log  huhuClientPi  install_manifest.txt
huhuClient/: CMakeLists.txt  SimpleClient.cpp  SimpleClient.h  main.cpp
huhuClientPi/: CMakeLists.txt  SimpleClient.cpp  SimpleClient.h  main.cpp
huhuServer/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  SimpleServer.cpp  SimpleServer.h  main.cpp
server/: CMakeLists.txt  SimpleServer.cpp  SimpleServer.h
server/build-huhuServer-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  huhuServer
server/build-huhuServer-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f04b7793215cb36588ac.json  codemodel-v2-cc26986ced5702f8c842.json  target-huhuServer-Debug-009982ce8055c5da37e8.json  target-huhuServer_autogen-Debug-ec53f7ad6192c456798c.json
server/build-huhuServer-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-60af716f4660cec2d0eb.json  directory-.-Debug-16b8ece3071924aa5894.json  index-2025-08-06T03-03-22-0439.json  target-huhuServer_autogen_timestamp_deps-Debug-9db2c16ff91c21433877.json
server/build-huhuServer-Desktop-Debug/.qt/: QtDeploySupport.cmake
server/build-huhuServer-Desktop-Debug/huhuServer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
server/build-huhuServer-Desktop-Debug/huhuServer_autogen/EWIEGA46WW/: moc_SimpleServer.cpp  moc_SimpleServer.cpp.d
